tests/assembler/fail/test12.ial
type VoidField
{
    field instance void foo;
}
